# 8910DM_LVGL

./: .gitignore  CMakeLists.txt  Kconfig  README.md  build_all.bat  clean.bat  debug.bat  debug_prj.bat  h.bat  help.bat  image_gen.py  new.bat  new_prj.bat  r.bat  r_debug.bat  resgen.bat
components/apploader/: CMakeLists.txt
components/apploader/include/: app_loader.h
components/apploader/pack/: CMakeLists.txt  app_fileimg.ld  app_flashimg.ld  core_filelist.xml  core_launch.bat  core_launch.sh  hello_world.c
components/apploader/src/: app_loader.c  core_config.cmake.in  core_export.list
components/appstart/: CMakeLists.txt  Kconfig
components/appstart/include/: app_config.h.in
components/appstart/src/: app_start.c
components/atr/: CMakeLists.txt  Kconfig  core.cmake
components/atr/include/: at_cfg.h  at_command.h  at_engine.h  at_param.h  at_response.h  atr_config.h.in
components/atr/src/: at_cmd_cfg.c  at_cmd_cfg_default.c  at_cmd_table.gperf  at_device.c  at_device_diag.c  at_device_uart.c  at_device_userial.c  at_device_virt.c  at_engine.c  at_engine_imp.h  at_param.c  at_parse.c  at_parse.h  at_response.c  at_setting.proto  at_setting_codec.c  at_setting_codec.h  gperf2h.py
components/ats/: CMakeLists.txt  Kconfig
components/ats/alic/: Kconfig  at_cmd_alic.c
components/ats/apn/: Kconfig  csv_parse.py  global_apn.csv  local_apn.csv
components/ats/audio/: Kconfig  at_cmd_audio.c  at_cmd_tts.c
components/ats/battery/: at_cmd_battery.c
components/ats/bt/: Kconfig  at_cmd_blueu_verify.c  at_cmd_bt.c  at_cmd_bt_app.c  at_cmd_bt_classic.c  at_cmd_btcomm.c  at_cmd_btmsg.c  at_cmd_spble.c  at_cmd_spbletest.c  at_cmd_spbttest.c
components/ats/cam/: Kconfig  at_cmd_camera.c
components/ats/cc/: at_cmd_cc.c
components/ats/cfw/: Kconfig  at_cfw.c
components/ats/coap/: Kconfig  at_cmd_coap.c
components/ats/dm/: Kconfig  at_cmd_dm_lwm2m.c
components/ats/emod/: at_cmd_emod.c
components/ats/fs/: at_cmd_fs.c
components/ats/ftp/: Kconfig  at_cmd_ftp.c  at_cmd_myftp.c  at_cmd_newMyftp.c  at_cmd_newftp.c
components/ats/gc/: at_cmd_fupdate.c  at_cmd_gc.c
components/ats/gprs/: Kconfig  at_cmd_gprs.c
components/ats/http/: Kconfig  at_cmd_http.c
components/ats/id/: at_cmd_id.c
components/ats/include/: at_cfw.h  at_cmd_alic.h  at_cmd_audio.h  at_cmd_bt.h  at_cmd_btmsg.h  at_cmd_camera.h  at_cmd_cissdk_mipl.h  at_cmd_coap.h  at_cmd_dm_lwm2m.h  at_cmd_ftp.h  at_cmd_gprs.h  at_cmd_http.h  at_cmd_myftp.h  at_cmd_myinfo.h  at_cmd_mynet.h  at_cmd_sntp.h  at_cmd_ss.h  at_cmd_ssim.h  at_cmd_tcpip.h  at_pm.h  ats_config.h.in  http.h  tb.h
components/ats/lpa/: at_cmd_lpa.c
components/ats/lwm2m/: Kconfig  at_cmd_cissdk_mipl.c  at_cmd_oceanconnect.c
components/ats/misc/: Kconfig  at_cmd_create_atch.c  at_cmd_debug.c  at_cmd_sysnv.c
components/ats/mqtt/: Kconfig  at_cmd_mqtt.c  at_cmd_pahomqtt.c
components/ats/myinfo/: at_cmd_myinfo.c
components/ats/nv/: at_cmd_nv.c
components/ats/nw/: at_cmd_nw.c
components/ats/pbk/: at_cmd_pbk.c
components/ats/sat/: at_cmd_sat.c
components/ats/sim/: Kconfig  at_cmd_sim.c  at_cmd_vsim.c
components/ats/simlock/: at_cmd_simlock.c
components/ats/sms/: at_cmd_sms.c
components/ats/sntp/: at_cmd_sntp.c
components/ats/ss/: at_cmd_ss.c  at_ss_api.c
components/ats/ssim/: Kconfig  at_cmd_ssim.c
components/ats/tb/: tb.c  tb_internal.h  tb_test.c
components/ats/tcpip/: Kconfig  at_cmd_mynet.c  at_cmd_netif.c  at_cmd_ping.c  at_cmd_ssl.c  at_cmd_tcpip.c  at_cmd_udp.c
components/ats/wifi/: Kconfig  at_cmd_wifi.c
components/audio/: CMakeLists.txt  Kconfig  core.cmake
components/audio/include/: audio_config.h.in  audio_decoder.h  audio_device.h  audio_encoder.h  audio_player.h  audio_reader.h  audio_recorder.h  audio_tonegen.h  audio_types.h  audio_writer.h
components/audio/src/: audio_decoder.c  audio_encoder.c  audio_internal.h  audio_reader.c  audio_types.c  audio_writer.c
components/bootloader/: CMakeLists.txt  Kconfig
components/bootloader/boot/: boot2_start_8910.c  boot_start_8910.c
components/bootloader/fdl1/: fdl1_main.c
components/bootloader/fdl2/: fdl2_main.c
components/bootloader/flash_test_fdl/: flash_test_main.c
components/bootloader/include/: boot_adi_bus.h  boot_aes.h  boot_bsl_cmd.h  boot_config.h.in  boot_debuguart.h  boot_entry.h  boot_fdl.h  boot_fdl_channel.h  boot_irq.h  boot_mem.h  boot_mmu.h  boot_pdl.h  boot_platform.h  boot_secure.h  boot_simage.h  boot_spi_flash.h  boot_timer.h  boot_uart.h  boot_udc.h  boot_uimage.h  boot_vfs.h  image_header.h  ql_boot_lcd.h  ql_boot_spi_flash.h  quec_boot_fota.h  quec_boot_pin_index.h  quec_boot_uart.h
components/bootloader/ldscripts/: ramrun_uimage_arm.ld
components/bootloader/src/: boot_adi_bus.c  boot_aes.c  boot_debuguart.c  boot_delay.c  boot_entry_v7a.S  boot_fdl.c  boot_fdl_dnld.c  boot_irq.c  boot_mem.c  boot_mmu.c  boot_pdl.c  boot_pdl_uimage.c  boot_secure.c  boot_sffs_port.c  boot_spi_flash.c  boot_stub.c  boot_timer.c  boot_trace.c  boot_uart.c  boot_uart_cmn.c  boot_udc.c  boot_uimage.c  boot_usb_fdl_channel.c  boot_vfs.c  ql_boot_lcd.c  ql_boot_spi_flash.c  quec_boot_fota.c  quec_boot_pin_index.c  quec_boot_uart.c
components/bt_app/: CMakeLists.txt  Kconfig
components/bt_app/bt_adaptor/: bt_abs.c
components/bt_app/bt_npi_test/: npi_test.c  npi_test.h
components/bt_app/bt_nv/: CMakeLists.txt
components/bt_app/example_bt_a2dp/: app_bt_a2dp.c
components/bt_app/include/: bt_abs.h  (+8 more)
components/cfw/: CMakeLists.txt  Kconfig  core.cmake
components/diag/: CMakeLists.txt  Kconfig
components/driver/: CMakeLists.txt  Kconfig  core.cmake
components/fs/: CMakeLists.txt  Kconfig
components/hal/: CMakeLists.txt  Kconfig
components/kernel/: CMakeLists.txt  Kconfig  core.cmake
components/libjpeg-turbo/: CMakeLists.txt  README
components/libs/: CMakeLists.txt
components/ml/: CMakeLists.txt
components/net/: CMakeLists.txt  Kconfig
components/nvm/: CMakeLists.txt  Kconfig
components/service/: CMakeLists.txt  Kconfig
components/tb/: CMakeLists.txt  Kconfig
components/tts/: CMakeLists.txt  Kconfig
(+4943 files in other folders)
